# gso_downloader

./: .gitignore  BUILD.bazel  README.md  WORKSPACE
src/: BUILD.bazel  download.py  ignition.py  model.proto  strings.json  utils.py
